--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,6 +13,7 @@
         align-items: flex-start;
         flex-direction:column;
     }
+    .page-link{width: 100%;text-align: start;}
 
     #section4 {height: 700vh;}
     .script_cont{width: 85%;}
